# rust-cpp-dragons-meetup

./: README.md  proposed-topics.md  pull_request_template.md
meetups/: readme.md
meetups/2021_05_17_loop_performance_and_memory_map_files/: readme.md
meetups/2021_09_29_face_detection_and_bit_twiddling/: FaceDetection.md  FaceDetection.odp  readme.md
meetups/2021_12_09_cppcon/: readme.md
meetups/2022_02_23_cpp_implementing_an_enigma/: readme.md
meetups/2022_04_20_building_an_image_viewer/: readme.md
meetups/2022_07_27_using_rust_to_read_the_little_schemer/: readme.md
meetups/2022_08_17_traits_vs_concepts/: readme.md  traits_concepts_slides.html  traits_concepts_slides.md
meetups/2022_09_14_introduction_to_async_in_rust/: async-slides.md  readme.md
meetups/2022_09_14_introduction_to_async_in_rust/intro-async/: Cargo.toml
meetups/2022_09_14_introduction_to_async_in_rust/intro-async/src/: 10_tokio_scoped.rs  1_minimal_async.rs  2_tokio_main.rs  3_tokio_wait_on_ports.rs  4_async_std_main.rs  5_async_std_ports.rs  6_async_std_join.rs  7_futures_main.rs  8_async_trait.rs  9_thread_scoped.rs
meetups/2022_09_14_introduction_to_async_in_rust/tokio-tutorial-code/hello-tokio-set/: Cargo.toml
meetups/2022_10_cardiff_bristol_joint_meetup/: readme.md
meetups/2022_11_30_our_top_rust_crates_and_how_to_use_them/: readme.md
meetups/2022_11_9_atomics/: 2022-11-9-atomics.html  2022-11-9-atomics.md  readme.md
meetups/2022_11_9_atomics/atomics/: Cargo.toml
meetups/2023_02_28_rust_nation_uk/: 2023-02-28-rust-nation-meetup.md  conf-writeups.md  readme.md
(+42 files in other folders)
